# definitions

./: .gitignore  .travis.yml  jestconfig.json  package-lock.json  package.json
protobuf/: device.proto  values.proto
rust/: Cargo.toml
test/: device.test.ts  energyDay.test.ts  snapshot.test.ts
test/data/: twoDevices
